--- a/index.html
+++ b/index.html
@@ -50,14 +50,19 @@
       border-bottom:1px solid var(--border);
     }
     .nav .wrap{
-      display:flex;align-items:center;justify-content:space-between;gap:16px;
-      padding:14px 0;flex-wrap:wrap;
+      display:flex;align-items:center;justify-content:space-between;gap:20px;
+      padding:18px 0;flex-wrap:wrap;
     }
     .brand{display:flex;align-items:center;gap:12px}
     .logo-img{
-      height:38px;
+      height:88px; /* large desktop logo */
       width:auto;
       display:block;
+      transition: height .25s ease;
+    }
+    
+    .nav.shrink .logo-img{
+      height:56px; /* shrink on scroll */
     }
     .brand b{font-size:16px;letter-spacing:-.2px}
     .brand span{display:block;font-size:12px;color:var(--muted);font-weight:500;margin-top:2px}
@@ -200,10 +205,7 @@
     <div class="wrap">
       <a class="brand" href="#top" aria-label="TriTech IT Home">
         <img src="assets/logo.png" alt="TriTech IT logo" class="logo-img">
-        <div>
-          <b>TriTech IT</b>
-          <span>MSP • Security • Compliance</span>
-        </div>
+        
       </a>
 
       <div class="links" aria-label="Primary">
@@ -439,6 +441,13 @@
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
+
+    // shrink header on scroll
+    const nav = document.querySelector('.nav');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 80) nav.classList.add('shrink');
+      else nav.classList.remove('shrink');
+    });
   </script>
 
   <!-- Tally embed loader -->
